# compliance

./: .env.development  .env.example  .env.production  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_FINAL.md  LAUNCH_INSTRUCTIONS.md  LAUNCH_READY.md  NAVIGATION_FIXES_SUMMARY.md  PRE_LAUNCH_CHECKLIST.md  README.md  SYSTEM_STATUS.md  UI_IMPLEMENTATION_SUMMARY.md  VERIFICATION_CHECKLIST.md  WORKFLOW_MANAGEMENT_IMPLEMENTATION.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  jest.config.js  launch-dev.sh  launch-production.sh  launch.sh  package.json  setup.sh  sync-project.sh  test-services.sh
.github/workflows/: ci-cd-pipeline.yaml  ci-cd.yml  nextjs.yml  security-scan.yaml
ai-services/: .env.example  Dockerfile  Dockerfile.jupyter  README.md  demo_ai_service_apis.py  demo_document_intelligence.py  demo_model_training.py  docker-compose.yml  pyproject.toml  requirements-minimal.txt  requirements.txt
ai-services/src/: main.py
ai-services/src/api/: middleware.py  routes.py
ai-services/src/api/endpoints/: ai_gateway.py  api_docs.py  batch_processing.py  document_processing.py  health.py  model_training.py  models.py  nlp.py  regulatory_intelligence.py  risk_assessment.py  service_integration.py
ai-services/src/core/: cache.py  config.py  database.py  logging.py  models.py
ai-services/src/services/: document_intelligence.py  model_training_pipeline.py  nlp_engine.py  requirement_extractor.py  risk_models.py  scheduled_training_service.py
ai-services/tests/: test_ai_service_apis.py  test_document_intelligence.py  test_model_training_pipeline.py
backend/: .env.example  .env.production  Dockerfile  healthcheck.js  package.json
backend/src/: server.ts
docs/: API_DOCUMENTATION.md  BEST_PRACTICES.md  FAQ.md  README.md  TRAINING_MATERIALS.md  TROUBLESHOOTING_GUIDE.md  USER_GUIDE.md  cdn-setup-guide.md  compliance-security-documentation.md  database-optimization.md  horizontal-autoscaling.md  load-balancing-strategies.md  vscode-setup.md
docs/website/: index.html
frontend/: .env.example  .env.production  Dockerfile  README.md  next.config.backup.js  next.config.js  package.json  tailwind.config.js
frontend/public/: sw.js
infrastructure/: README.md  deploy.sh
infrastructure/aws/: iam.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
infrastructure/azure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/cdn/: asset-optimization-pipeline.yaml  cloudfront-distribution.yaml
k8s/: README.md  deploy.sh
k8s/apps/: auth-service.yaml  frontend.yaml  integration-gateway.yaml
k8s/autoscaling/: cluster-autoscaler.yaml  hpa-auth-service.yaml  hpa-compliance-service.yaml  keda-scalers.yaml  monitoring-dashboard.yaml  vpa-configurations.yaml
k8s/backup-disaster-recovery/: backup-system.yaml
k8s/base/: kustomization.yaml
k8s/cdn/: cdn-monitoring.yaml  nginx-cdn-cache.yaml
k8s/cluster/: namespace.yaml
k8s/config/: configmaps.yaml  secrets.yaml
k8s/database/: postgres.yaml  redis.yaml
k8s/disaster-recovery/: cross-region-dr-tests.yaml
k8s/load-balancing/: advanced-services.yaml  intelligent-ingress.yaml  istio-service-mesh.yaml  monitoring-alerting.yaml  nginx-ingress-controller.yaml
k8s/monitoring/: prometheus.yaml
k8s/networking/: ingress.yaml
k8s/rbac/: rbac.yaml
monitoring/prometheus/: prometheus.yml
scripts/: autoscaling-manager.sh  cdn-manager.sh  deploy-production.sh  disaster-recovery-manager.sh  docker-dev.sh  generate_dr_test_report.py  generate_test_report.py  generate_verification_report.py  load-balancing-manager.sh  migrate-database.sh  setup-all-databases.sh  setup-complete.sh  setup-elasticsearch.sh  setup-kafka-topics.sh  setup-kong.sh  setup-mongodb.sh  setup-postgresql.sh  setup-rabbitmq.sh  setup-redis.sh  start-production.sh
services/auth-service/: .env.development  .env.example  Dockerfile
testing/: README.md  jest.config.js
tests/: comprehensive-testing-framework.yaml  integration-tests-suite.yaml  unit-tests-suite.yaml
(+376 files in other folders)
